--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -32,10 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.0.15
+  fitbitter: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  pkce: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
