--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   shared_preferences: ^2.0.15
   fitbitter: ^2.0.1
+  uni_links: ^0.5.1
+  app_links: ^3.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
