--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -6,10 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "https_port": 443,
-  "Kestrel": {
-    "Https":{
-      "Url": "https://172.16.3.150:443"
-    }
-  }
+  "https_port": 5000
 }
