--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pkce: ^1.1.0+1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
