--- a/frontend/ios/Runner/Info.plist
+++ b/frontend/ios/Runner/Info.plist
@@ -51,6 +51,7 @@
       	<key>CFBundleURLSchemes</key>
     	<array>
     		<string>dreamtemp</string>
+			<string>com.example.frontend</string>
       	</array>
     	</dict>
   	</array>
