--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   pkce: ^1.1.0+1
   http: ^0.13.5
+  flutter_web_auth: ^0.4.3
 
 dev_dependencies:
   flutter_test:
